21Jan22=======================================================================
1. downgrade console.pl require to perl 5.8.1.
2. Backport grepdbg from mojo.
20Jan22=======================================================================
1. Fix version tracking related bugs.
2. Backport grepdbg from mojo.
09Jan22=======================================================================
1. Add New Year CTY 3201 prefix data.
07Jan22=======================================================================
1. Backport console.pl from the Mojo Branch.
06Jan22=======================================================================
1. Backport various Mojo branch "security" fixes. 
12Dec21=======================================================================
1. fix git describe et al AGAIN to cope with (very) old (2009) git versions.
2. Change version strings to include perl version in use.
11Dec21=======================================================================
1. Removed dependency on perl Git package.
2. Fixed errors caused by change 1 (use git -C $root to force .git location).
10Dec21=======================================================================
1. Fix the output of set/dxgrid, set/usstate and set/dxcq or set/dxitu to how
   it was always supposed to be since 2003.
2. Fix console.pl resizing.
09Dec21=======================================================================
1. Moved isregistered to DXChannel for safety...
08Dec21=======================================================================
1. Backport console.pl scrolling and width management changes.
2. Backport show/registered cmd format from mojo.
06Dec21=======================================================================
1. Fix show/register to allow query of individual calls as well as get a 
   complete list.
15Jul21=======================================================================
1. Fix long standing bug in crontabs that commands with " rather than ' around